--- a/index.html
+++ b/index.html
@@ -110,12 +110,21 @@
                 <ul class="services-list list">
                     <li class="services-item">
                         <img class="services-img" src="./images/services/code.jpg" alt="написание кода" width="370" height="294">
+                        <div class="services-row">
+                            <h3 class="services-subtitle">Десктопные приложения</h3>
+                        </div>
                     </li>
                     <li class="services-item">
                         <img class="services-img" src="./images/services/layout.jpg" alt="создание макетов" width="370" height="294">
+                        <div class="services-row">
+                            <h3 class="services-subtitle">Мобильные приложения</h3>
+                        </div>
                     </li>
                     <li class="services-item">
                         <img class="services-img" src="./images/services/palette.jpg" alt="палитра цветов" width="370" height="294">
+                        <div class="services-row">
+                            <h3 class="services-subtitle">Дизайнерские решения</h3>
+                        </div>
                     </li>
                 </ul>
             </div>
