--- a/portfolio.html
+++ b/portfolio.html
@@ -75,89 +75,164 @@
                 <ul class="portfolio-list list">
                     <li class="portfolio-item">
                         <a class="portfolio-link link" href="">
-                            <img class="portfolio-img" src="./images/portfolio/web.jpg" alt="Демонстрация веб-сайта" width="370"
-                                height="294">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-img" src="./images/portfolio/web.jpg" alt="Демонстрация веб-сайта" width="370" height="294">
+                                <div class="portfolio-row">
+                                    <p class="portfolio-row-txt">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="txt-card">
                                 <h2 class="portfolio-subtitle">Технокряк</h2>
-                                <p class="portfolio-desc">Веб-сайт</p>
+                                <h3 class="portfolio-desc">Веб-сайт</h3>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link link" href="">
-                            <img class="portfolio-img" src="./images/portfolio/poster.jpg" alt="Постер с баскетболистами" width="370"
-                                height="294">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-img" src="./images/portfolio/poster.jpg" alt="Постер с баскетболистами" width="370" height="294">
+                                <div class="portfolio-row">
+                                    <p class="portfolio-row-txt">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="txt-card">
                                 <h2 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h2>
-                                <p class="portfolio-desc">Дизайн</p>
+                                <h3 class="portfolio-desc">Дизайн</h3>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link link" href="">
-                            <img class="portfolio-img" src="./images/portfolio/seafood.jpg" alt="Логотип ресторана" width="370"
-                                height="294">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-img" src="./images/portfolio/seafood.jpg" alt="Логотип ресторана" width="370" height="294">
+                                <div class="portfolio-row">
+                                    <p class="portfolio-row-txt">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="txt-card">
                                 <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
-                                <p class="portfolio-desc">Приложение</p>
+                                <h3 class="portfolio-desc">Приложение</h3>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link link" href="">
-                            <img class="portfolio-img" src="./images/portfolio/prime.jpg" alt="Закрытые наушники" width="370"
-                                height="294">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-img" src="./images/portfolio/prime.jpg" alt="Закрытые наушники" width="370" height="294">
+                                <div class="portfolio-row">
+                                    <p class="portfolio-row-txt">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="txt-card">
                                 <h2 class="portfolio-subtitle">Проект Prime</h2>
-                                <p class="portfolio-desc">Маркетинг</p>
+                                <h3 class="portfolio-desc">Маркетинг</h3>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link link" href="">
-                            <img class="portfolio-img" src="./images/portfolio/boxes.jpg" alt="Коробки" width="370" height="294">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-img" src="./images/portfolio/boxes.jpg" alt="Коробки" width="370" height="294">
+                                <div class="portfolio-row">
+                                    <p class="portfolio-row-txt">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="txt-card">
                                 <h2 class="portfolio-subtitle">Проект Boxes</h2>
-                                <p class="portfolio-desc">Приложение</p>
+                                <h3 class="portfolio-desc">Приложение</h3>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link link" href="">
-                            <img class="portfolio-img" src="./images/portfolio/inspiration.jpg" alt="Демонстрация веб-сайта" width="370"
-                                height="294">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-img" src="./images/portfolio/inspiration.jpg" alt="Демонстрация веб-сайта" width="370"
+                                    height="294">
+                                <div class="portfolio-row">
+                                    <p class="portfolio-row-txt">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="txt-card">
                                 <h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
-                                <p class="portfolio-desc">Веб-сайт</p>
+                                <h3 class="portfolio-desc">Веб-сайт</h3>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link link" href="">
-                            <img class="portfolio-img" src="./images/portfolio/edition.jpg" alt="Издание в развороте" width="370"
-                                height="294">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-img" src="./images/portfolio/edition.jpg" alt="Издание в развороте" width="370" height="294">
+                                <div class="portfolio-row">
+                                    <p class="portfolio-row-txt">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="txt-card">
                                 <h2 class="portfolio-subtitle">Издание Limited Edition</h2>
-                                <p class="portfolio-desc">Дизайн</p>
+                                <h3 class="portfolio-desc">Дизайн</h3>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link link" href="">
-                            <img class="portfolio-img" src="./images/portfolio/lab.jpg" alt="Бирка продукта" width="370" height="294">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-img" src="./images/portfolio/lab.jpg" alt="Бирка продукта" width="370" height="294">
+                                <div class="portfolio-row">
+                                    <p class="portfolio-row-txt">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="txt-card">
                                 <h2 class="portfolio-subtitle">Проект LAB</h2>
-                                <p class="portfolio-desc">Маркетинг</p>
+                                <h3 class="portfolio-desc">Маркетинг</h3>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link link" href="">
-                            <img class="portfolio-img" src="./images/portfolio/business.jpg" alt="Демонстрация приложения" width="370"
-                                height="294">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-img" src="./images/portfolio/business.jpg" alt="Демонстрация приложения" width="370" height="294">
+                                <div class="portfolio-row">
+                                    <p class="portfolio-row-txt">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="txt-card">
                                 <h2 class="portfolio-subtitle">Growing Business</h2>
-                                <p class="portfolio-desc">Приложение</p>
+                                <h3 class="portfolio-desc">Приложение</h3>
                             </div>
                         </a>
                     </li>
